[gd_scene load_steps=5 format=3 uid="uid://dirhpilhurovo"]

[ext_resource type="Script" path="res://main.gd" id="1_iqem5"]
[ext_resource type="PackedScene" uid="uid://ciuee3ckaxauh" path="res://map_button.tscn" id="2_xlw1j"]
[ext_resource type="PackedScene" uid="uid://dhj4yt25e3s6x" path="res://web_socket.tscn" id="3_u8052"]
[ext_resource type="Texture2D" uid="uid://c1dcjm6b7cox7" path="res://warning_icon.png" id="3_v1e8k"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqem5")
map_button = ExtResource("2_xlw1j")
warning_icon = ExtResource("3_v1e8k")

[node name="WebSocket" parent="." instance=ExtResource("3_u8052")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.488
anchor_top = 0.648
anchor_right = 0.985
offset_left = -0.176025
offset_top = 0.0960083
offset_right = 0.279907
offset_bottom = -66.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.493
anchor_bottom = 1.0
offset_right = 0.0639648
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.192157, 0.211765, 0.231373, 1)

[node name="SCMaps" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MCsad" type="MarginContainer" parent="MarginContainer/SCMaps"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="GCMaps" type="GridContainer" parent="MarginContainer/SCMaps/MCsad"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="DownloadMapCovers" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 1.0
anchor_right = 0.606
anchor_bottom = 1.0
offset_left = -0.568054
offset_top = -51.0
offset_right = -0.112
offset_bottom = -20.0
grow_vertical = 0
text = "Download covers"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_right = 0.476
offset_left = 0.415998
offset_top = 15.0
offset_right = -0.35199
offset_bottom = 57.0

[node name="Player1" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.57
anchor_right = 0.913
offset_left = 0.359924
offset_top = 15.0
offset_right = 0.223999
offset_bottom = 57.0

[node name="Player2" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.572
anchor_right = 0.915
offset_left = 0.0559692
offset_top = 74.0
offset_right = -0.0800781
offset_bottom = 116.0

[node name="LabelPlayer1" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.552
offset_left = -2.0
offset_top = 25.0
offset_right = -21.9041
offset_bottom = 48.0
text = "Player 1
"

[node name="LabelPlayer2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.554
offset_top = 84.0
offset_right = -0.208008
offset_bottom = 107.0
text = "Player 2
"

[node name="SwitchPlayers" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.929
anchor_right = 0.99
offset_left = -0.208008
offset_top = 17.0
offset_right = -0.480103
offset_bottom = 51.0
text = "switch"

[node name="RandomizePlayers" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.931
anchor_right = 0.991
offset_left = -0.512085
offset_top = 78.0
offset_right = -11.6321
offset_bottom = 112.0
text = "random"

[node name="Undo" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.488
anchor_top = 1.0
anchor_right = 0.531
anchor_bottom = 1.0
offset_left = -0.176025
offset_top = -93.0
offset_right = 0.287964
offset_bottom = -62.0
text = "undo"

[node name="ReloadPools" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.544
anchor_top = 1.0
anchor_right = 0.635
anchor_bottom = 1.0
offset_left = 0.311951
offset_top = -92.0
offset_right = -0.520081
offset_bottom = -61.0
text = "reload pools"

[node name="CopyToClipboard" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.619
anchor_top = 1.0
anchor_right = 0.814
anchor_bottom = 1.0
offset_left = -0.0880127
offset_top = -54.0
offset_right = 0.271973
offset_bottom = -23.0
button_pressed = true
text = "copy picks to clipboard"

[node name="CopyListToClipboard" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.82
anchor_top = 1.0
anchor_right = 0.987
anchor_bottom = 1.0
offset_left = 0.359924
offset_top = -51.0
offset_right = -0.0240479
offset_bottom = -20.0
text = "copy all picks and bans"

[node name="PickorderList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_right = 0.97
anchor_bottom = 0.625
offset_left = 0.151978
offset_top = 163.0
offset_right = -0.440063

[connection signal="pressed" from="DownloadMapCovers" to="." method="_on_download_map_covers_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="text_changed" from="Player1" to="." method="_on_player_text_changed"]
[connection signal="text_changed" from="Player2" to="." method="_on_player_text_changed"]
[connection signal="pressed" from="SwitchPlayers" to="." method="_on_switch_players_pressed"]
[connection signal="pressed" from="RandomizePlayers" to="." method="_on_randomize_players_pressed"]
[connection signal="pressed" from="Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="ReloadPools" to="." method="load_pools"]
[connection signal="pressed" from="CopyListToClipboard" to="." method="_on_copy_list_to_clipboard_pressed"]
